--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,3 +1,7 @@
 .header-cmp{
-    text-align: center
+    height: 56px;
+
+    @media screen and (min-width: 600px){
+        height: 64px;
+    }
 }
